# purple-gowhatsapp

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  Makefile  Makefile.mingw  PKGBUILD  README.md  build_and_install.sh  constants.h  cpack.cmake  go.mod  gowhatsapp_trigger_read_dummy.c  gwa-to-purple.c  libgowhatsapp.c  proxy.h  purple_compat.h  purplegwa-media.go  purplegwa.go  version.sh
.github/: FUNDING.yml
.github/workflows/: build.yml
dependencies/win32/: CMakeLists.txt  dll2lib.bat
purple2compat/: ORIGIN  glibcompat.h  internal.h
src/: connection.cpp
src/c/: CMakeLists.txt  blist.c  bridge.c  bridge.h  bridge_getters.c  bridge_message.c  cli.c  commands.c  connection.c  connection.cpp  constants.c  constants.h  display_message.c  gowhatsapp.h  gowhatsapp.hpp  groups.c  handle_attachment.c  init.c  init.cpp  login.c  message_filtering.c  msc_adjustments.c  options.c  opusreader.c  opusreader.h  pixbuf.c  pixbuf.h  presence.c  process_message.c  purple_compat.h  qrcode.c  receipt.c  send_file.c  send_message.c
src/go/: CMakeLists.txt  bridge.go  bridge.h  constants.h  conversations.go  file_checkers.go  go.mod  go.mod.in  groups.go  handle_message.go  handler.go  init.go  interface.go  logger.go  login.go  mark_read.go  message_cache.go  msc_adjustments.h  oggreader.go  presence.go  profile.go  purple-dummy.c  send_file.go  send_file_checks.go  send_message.go
